--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cls-hooked": "^4.2.2",
     "config": "^3.3.9",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.7",
@@ -38,6 +39,7 @@
     "mysqldump": "^3.2.0",
     "node-ccavenue": "^1.0.5",
     "node-cron": "^3.0.2",
+    "node-forge": "^1.3.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
@@ -48,6 +50,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "prettier": "^3.0.1"
   }
 }
