--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
+    "csvtojson": "^2.0.10",
     "debug": "^4.3.4",
     "dotenv": "^16.3.0",
     "ejs": "^3.1.9",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "formidable": "^3.3.2",
+    "formidable": "^3.5.0",
     "helmet": "^7.0.0",
     "html-pdf": "^3.0.1",
     "http-errors": "^2.0.0",
@@ -45,6 +47,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pdfkit-table": "^0.1.99",
+    "puppeteer": "^21.0.3",
     "sequelize": "^6.32.0",
     "socket.io": "^4.6.2",
     "uuid": "^9.0.0"
