--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.5",
