--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "passport-local": "^1.0.0",
     "pdfkit-table": "^0.1.99",
     "puppeteer": "^21.0.3",
+    "razorpay": "^2.9.2",
     "sequelize": "^6.32.0",
     "socket.io": "^4.6.2",
     "uuid": "^9.0.0"
